# gzdoom-rt

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  auto-setup-windows.cmd  cspell.config.yaml  options.checklist  pyproject.toml  taskfile.yaml  vcpkg.json
.github/config/: gzdoom-rt.dict
.github/workflows/: appimage.yml  continuous_integration.yml
