[project]
name = "gzdoom-rt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "pylint>=3.2.7",
    "ruff>=0.6.5",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pyright>=1.1.380",
    "meson>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gzdoom_rt"]
